# rapier_tutorial

./: .gitignore  Cargo.toml
assets/: ball.aseprite  ball.json
src/: main.rs
