[package]
name = "rapier_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "0.18.0", features = [ "simd-stable" ] }
glam = "0.25.0"
aseprite = "0.1.3"
ggez = "0.9.3"
serde = "1.0.196"
serde_json = "1.0.113"
image = "0.24.8"